feature-2 set up toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SubmissionAppAlison</string>
+    <string name="menu_logout">logout</string>
+    <string name="my_header_title">My header title</string>
 </resources>
